[package]
name = "shovel"
version = "0.1.0"
authors = ["Cameron Paul <cpaul37@gmail.com>"]

[dependencies]
diesel = { version = "0.11.0", features = ["postgres"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
hyper = "0.10.9"
iron = "0.5.1"
router = "0.5.1"
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
serde = "1.0.2"
serde_derive = "1.0.2"
tera = "0.10.1"
